--- a/fault_tolerance_report.tex
+++ b/fault_tolerance_report.tex
@@ -109,7 +109,7 @@ pdfkeywords={faulttolerance spinnaker}
 	arn/.style = {treenode, rectangle, draw=black, rounded corners=4pt, fill=blue!20, font=\sffamily\bfseries, text width=10em},
 	arn_lev1/.style = {treenode, text width=6em},
 	arn_lev2/.style = {treenode, text width=6em},
-	arn_lev2a/.style = {treenode, text width=5em}
+	arn_lev2a/.style = {treenode, text width=5.8em}
 }
 
 % *************** Caption font configuration ****************
@@ -237,11 +237,13 @@ Outages in computer systems consist of both hardware and software failures. Whil
 
 It was long assumed that concepts of reliability and failure rate do not apply to software since software does not degrade physically as a function of time or environmental stresses. But it is not reasonable to expect a software system to be operating on the same input data, user requirements and computing environment constantly. These changes must be accommodated in most applications and so a history of fault-free behavior cannot be taken as an indication of fault-free behaviour in the future. Many studies have shown that even for applications which have relatively less complex software, many failures in computer systems are due to software bugs \citep{pradhan1996fault}. Therefore, software reliability is one of the weakest links in system reliability.
 
-Demands on software reliability and availability have increased tremendously due to the nature of present day applications. There are stringent requirements in terms of cumulative down time and failure free operation of software. In many cases, there are serious consequences like huge economic losses or risk to human life if the software is faulty. In spite of using the best available software development techniques, there have been many instances of spectacular system failures due to software errors like the crash of the Ariane 5 launcher in June 1996 which was attributed to specification and design errors in the software of the inertial reference system \citep{lions1996ariane}. Also, increasing complexity and proliferation of real-time software have led to a resultant increase in software failures. A major limitation in developing reliable software is the test and verification process. It is almost impossible to fully test and verify if a software is bug-free. \ul{Formal verification techniques such as proof of correctness cannot be applied to large programs. Furthermore, the shortcomings in the mathematical induction process on which proof of correctness is based and the difficulties in verifying adherence to timing constraints for real-time systems make the software testing and verification process harder. This limitation coupled with the very stringent requirements for fault-free operation of the software form the basis for the need for fault tolerance in software.}
+Demands on software reliability and availability have increased tremendously due to the nature of present day applications. There are stringent requirements in terms of cumulative down time and failure free operation of software. In many cases, there are serious consequences like huge economic losses or risk to human life if the software is faulty. In spite of using the best available software development techniques, there have been many instances of spectacular system failures due to software errors like the crash of the Ariane 5 launcher in June 1996 which was attributed to specification and design errors in the software of the inertial reference system \citep{lions1996ariane}. Also, increasing complexity and proliferation of real-time software have led to a resultant increase in software failures.
+
+A major limitation in developing reliable software is the test and verification process. It is almost impossible to fully test and verify if a software is bug-free. \ul{Formal verification techniques such as proof of correctness cannot be applied to large programs. Furthermore, the shortcomings in the mathematical induction process on which proof of correctness is based and the difficulties in verifying adherence to timing constraints for real-time systems make the software testing and verification process harder. This limitation coupled with the very stringent requirements for fault-free operation of the software form the basis for the need for fault tolerance in software.}
 
 \subsection{Software Failure and Classification of Software Faults}
 \subsubsection{What is a software failure?}
-According to \citet{laprie1992dependability}, ``a system failure occurs when the delivered service no longer complies with the specifications, the latter being an agreed description of the system's expected function and/or service''. This definition applies to both hardware and software system failures. Faults or bugs in a hardware or a software component cause errors. An error is defined by \citet{laprie1992dependability} as that part of the system which is liable to lead to subsequent failure, and an error affecting the service is an indication that a failure occurs or has occurred. If the system comprises of multiple components, errors can lead to a component failure. As various components in the system interact, failure of one component might introduce one or more faults in another. Figure 1 shows this cyclic behaviour.
+According to \citet{laprie1992dependability}, ``a system failure occurs when the delivered service no longer complies with the specifications, the latter being an agreed description of the system's expected function and/or service.'' This definition applies to both hardware and software system failures. Faults or bugs in a hardware or a software component cause errors. An error is defined by \citet{laprie1992dependability} as that part of the system which is liable to lead to subsequent failure, and an error affecting the service is an indication that a failure occurs or has occurred. If the system comprises of multiple components, errors can lead to a component failure. As various components in the system interact, failure of one component might introduce one or more faults in another.
 
 %\begin{figure}[htbp]
 %	\centering
@@ -250,20 +252,20 @@ According to \citet{laprie1992dependability}, ``a system failure occurs when the
 %\end{figure}
 
 \subsubsection{Classification of software faults}
-Some studies have suggested that since software is not a physical entity and hence not subject to transient physical phenomena (as opposed to hardware), software faults are permanent in nature \citep{huang1994two}. Some other studies classify software faults as both permanent and transient. \citet{gray1986computers} classifies software faults into Bohrbugs and Heisenbugs. Bohrbugs are essentially permanent design faults and hence almost deterministic in nature. They can be identified easily and weeded out during the testing and debugging phase (or early deployment phase) of the software life cycle. Heisenbugs, on the other hand, belong to the class of temporary internal faults and are intermittent. They are essentially permanent faults whose conditions of activation occur rarely or are not easily reproducible. Hence these faults result in transient failures, i.e., failures which may not recur if the software is restarted. Some typical situations in which Heisenbugs might surface are boundaries between various software components, improper or insufficient exception handling and interdependent timing of various events. It is for this reason that Heisenbugs are extremely difficult to identify through testing. \ul{Hence a mature piece of software in the operational phase, released after its development and testing stage, is more likely to experience failures caused by Heisenbugs than due to Bohrbugs. Most recent studies on failure data have reported that a large proportion of software failures are transient in nature} \citep{gray1986computers, gray1990census}, \ul{caused by phenomena such as overloads or timing and exception errors} \citep{chillarege1995measurement, sullivan1991software}. \ul{The study of failure data from Tandem's fault tolerant computer system indicated that 70\%. of the failures were transient failures, caused by faults like race conditions and timing problems} \citep{lee1994software, lee1995software}.
+Some studies have suggested that since software is not a physical entity and hence not subject to transient physical phenomena (as opposed to hardware), software faults are permanent in nature \citep{huang1994two}. Some other studies classify software faults as both permanent and transient. \citet{gray1986computers} classifies software faults into \hl{Bohrbugs} and \emph{Heisenbugs}. \hl{Bohrbugs (not a commonly used term)} are essentially permanent design faults and hence almost deterministic in nature. They can be identified easily and weeded out during the testing and debugging phase (or early deployment phase) of the software life cycle. \emph{Heisenbugs}, on the other hand, belong to the class of temporary internal faults and are intermittent. They are essentially permanent faults whose conditions of activation occur rarely or are not easily reproducible. Hence these faults result in transient failures, i.e., failures which may not recur if the software is restarted. Some typical situations in which \emph{Heisenbugs} might surface are boundaries between various software components, improper or insufficient exception handling and interdependent timing of various events. It is for this reason that \emph{Heisenbugs} are extremely difficult to identify through testing. \ul{Hence a mature piece of software in the operational phase, released after its development and testing stage, is more likely to experience failures caused by \emph{Heisenbugs} than due to \emph{Bohrbugs}. Most recent studies on failure data have reported that a large proportion of software failures are transient in nature} \citep{gray1986computers, gray1990census}, \ul{caused by phenomena such as overloads or timing and exception errors} \citep{chillarege1995measurement, sullivan1991software}. \ul{The study of failure data from Tandem's fault tolerant computer system indicated that 70\% of the failures were transient failures, caused by faults like race conditions and timing problems} \citep{lee1994software, lee1995software}.
 
 \subsection{Techniques for Fault Tolerance in Software}
 Means to cope with the existence and manifestation of faults in software are divided into three main categories:
 
 \begin{itemize}
-\item \textbf{Fault avoidance/prevention:} This include design methodologies which attempt to make software provably fault-free
+\item \textbf{Fault avoidance/prevention:} This includes design methodologies which attempt to make software provably fault-free.
 \item \textbf{Fault removal:} These methods aim to remove faults after the development stage is completed. This is done by exhaustive and rigorous testing of the final product.
-\item \textbf{Fault tolerance:} This methods makes the assumption that the system has unavoidable and undetectable faults and aims to make provisions for the system to operate correctly even in the presence of faults.
+\item \textbf{Fault tolerance:} This method makes the assumption that the system has unavoidable and undetectable faults and aims to make provisions for the system to operate correctly even in the presence of faults.
 \end{itemize}
 
-Most Bohrbugs, which are deterministic and repeatable, can be removed through rigorous and extensive testing and debugging. But, as argued in the previous sections, no amount of testing can certify software as fault-free, i.e. fault avoidance and fault removal cannot ensure the absence of faults. Therefore, any practical piece of software can be presumed to contain faults in the operational phase and designers must deal with these faults if the software failure has serious consequences. The remaining faults in software after testing and debugging are usually Heisenbugs which eluded detection during the testing. \ul{Hence, fault tolerance, is the only remaining hope to achieve dependable software. Fault tolerance makes is possible for the software system to provide service even in the presence of faults. This means that an imminent failure needs to be prevented or recovered from. In this paper, we will only discuss methods to deal with software in the operational phase, i.e., methods to provide fault tolerance.}
+Most \hl{Bohrbugs}, which are deterministic and repeatable, can be removed through rigorous and extensive testing and debugging. But, as argued in the previous sections, no amount of testing can certify software as fault-free, i.e., fault avoidance and fault removal cannot ensure the absence of faults. Therefore, any practical piece of software can be presumed to contain faults in the operational phase and designers must deal with these faults if the software failure has serious consequences. The remaining faults in software after testing and debugging are usually \emph{Heisenbugs} which eluded detection during the testing. \ul{Hence, fault tolerance, is the only remaining hope to achieve dependable software. Fault tolerance makes is possible for the software system to provide service even in the presence of faults. This means that an imminent failure needs to be prevented or recovered from. Only methods to deal with software fault tolerance in the operational phase will be discussed.}
 
-\ul{There are two strategies for software fault tolerance - error processing and fault treatment. Error processing aims to remove errors from the software state and can be implemented by substituting an error-free state in place of the erroneous state, called error recovery, or by compensating for the error by providing redundancy, called error compensation. Error recovery can be achieved by either forward or backward error recovery. The second strategy, fault treatment, aims to prevent activation of faults and so action is taken before the error creeps in. The two steps in this strategy are fault diagnosis and fault passivation. Figure 2 shows this classification. The nature of faults which typically occur in software has to be thoroughly understood in order to apply these strategies effectively. Techniques for tolerating faults in software have been divided into three classes - design diversity, data diversity and environment diversity. Table 1 shows the fault tolerance strategies used by these classes. All these classes are discussed briefly in the following sections.}
+There are two strategies for software fault tolerance --- error processing and fault treatment. Error processing aims to remove errors from the software state and can be implemented by substituting an error-free state in place of the erroneous state, called error recovery, or by compensating for the error by providing redundancy, called error compensation. Error recovery can be achieved by either forward or backward error recovery. The second strategy, fault treatment, aims to prevent activation of faults and so action is taken before the error creeps in. The two steps in this strategy are fault diagnosis and fault passivation. \textbf{Figure~\ref{fig:faulttoltree}} shows this classification. The nature of faults which typically occur in software has to be thoroughly understood in order to apply these strategies effectively. Techniques for tolerating faults in software have been divided into three classes --- design diversity, data diversity and environment diversity. \textbf{Table~\ref{tab:faulttolmethods}} shows the fault tolerance strategies used by these classes.
 
 \begin{figure}[htbp]
 %\centering
@@ -273,32 +275,34 @@ Most Bohrbugs, which are deterministic and repeatable, can be removed through ri
 	level 2/.style={sibling distance = 3.5cm}
 %	level 3/.style={sibling distance = 3.5cm}
 	] 
-\node [arn] {Means for Software Fault tolerance}
-child{ node [arn_lev1] {Error Processing} 
-	child{ node [arn_lev2] {Error Compensation} }
-	child{ node [arn_lev2] {Error Recovery}
-		child{ node [arn_lev2a] {Forward Error Recovery}}
-		child{ node [arn_lev2] {Backward Error Recovery}}
+\node [arn] {\small Means for Software Fault tolerance}
+child{ node [arn_lev1] {\small Error Processing} 
+	child{ node [arn_lev2] {\small Error Compensation} }
+	child{ node [arn_lev2] {\small Error Recovery}
+		child{ node [arn_lev2] {\small Forward Error Recovery}}
+		child{ node [arn_lev2] {\small Backward Error Recovery}}
 	}                            
 }
-child{ node [arn_lev1] {Fault Treatment} }
+child{ node [arn_lev1] {\small Fault Treatment} }
 ; 
 \end{tikzpicture}
 \caption{Means for software fault tolerance}
+\label{fig:faulttoltree}
 \end{figure}
 
 \subsubsection{Design diversity}
-Design diversity techniques are specifically developed to tolerate design faults in software arising out of wrong specifications and incorrect coding. Two or more variants of a software developed by different teams but to a common specification are used. These variants are then used in a time or space redundant manner to achieve fault tolerance. Popular techniques which are based on the design diversity concept for fault tolerance in software are:
+Design diversity techniques are specifically developed to tolerate design faults in software arising out of wrong specifications and incorrect coding. Two or more variants of a software developed by different teams but to a common specification are used. These variants are then used in a time or space redundant manner to achieve fault tolerance. Popular techniques which are based on the design diversity concept for fault tolerance in software are: N-version programming, Recovery block, and N-self checking programming.
 
-\begin{itemize}
-\item N-version programming: First introduced by \citet{avizienis1977implementation} in 1977, this concept is similar to the NMR (N-modular programming) approach in hardware fault tolerance. In this technique, N (N>=2) independently generated functionally equivalent programs called versions, are executed in parallel. A majority voting logic is used to compare the results produced by all the versions and report one of the results which is presumed correct. The ability to tolerate faults here depends on how ``independent'' the different versions of the program are. This technique has been applied to a number of real-life systems like rail road traffic control and flight control, even though the overhead involved in generating different versions and implementing the voting logic may be high.
-\item Recovery block: Recovery blocks were first introduced by \citet{horning1974program}. This scheme is analogous to the cold standby scheme for hardware fault tolerance. Basically, in this approach, multiple variants of a software which are functionally equivalent are deployed in a time redundant fashion. An acceptance test is used to test the validity of the result produced by the primary version. If the result from the primary version passes the acceptance test, this result is reported and execution stops. If, on the other hand, the result from the primary version fails the acceptance test, another version from among the multiple versions is invoked and the result produced is checked by the acceptance test. The execution of the structure does not stop until the acceptance test is passed by one of the multiple versions or until all the versions have been exhausted. The significant differences in the recovery block approach from N-version programming are that only one version is executed at a time and the acceptability of results is decided by a test rather than by majority voting. The recovery block technique has been applied to real life systems and has been the basis for the distributed recovery block structure for integrating hardware and software fault tolerance and the extended distributed recovery block structure for command and control applications. Modelling and analysis of recovery blocks are described by \citet{tomek1993modeling, lyu1995software}.
-\item N-self checking programming: In N-self checking programming, multiple variants of a software are used in a hot-standby fashion as opposed to the recovery block technique in which the variants are used in the cold-standby mode. A self-checking software component is a variant with an acceptance test or a pair of variants with an associated comparison test \citep{laprie1990definition}. Fault tolerance is achieved by executing more than one self-checking component in parallel. These components can also be used to tolerate one or more hardware faults.
-\end{itemize}
+%\begin{itemize}
+%\item N-version programming: First introduced by \citet{avizienis1977implementation}, this concept is similar to the NMR (N-modular programming) approach in hardware fault tolerance. In this technique, N (N>=2) independently generated functionally equivalent programs called versions, are executed in parallel. A majority voting logic is used to compare the results produced by all the versions and report one of the results which is presumed correct. The ability to tolerate faults here depends on how ``independent'' the different versions of the program are. This technique has been applied to a number of real-life systems like rail road traffic control and flight control, even though the overhead involved in generating different versions and implementing the voting logic may be high.
+%\item Recovery block: Recovery blocks were first introduced by \citet{horning1974program}. This scheme is analogous to the cold standby scheme for hardware fault tolerance. Basically, in this approach, multiple variants of a software which are functionally equivalent are deployed in a time redundant fashion. An acceptance test is used to test the validity of the result produced by the primary version. If the result from the primary version passes the acceptance test, this result is reported and execution stops. If, on the other hand, the result from the primary version fails the acceptance test, another version from among the multiple versions is invoked and the result produced is checked by the acceptance test. The execution of the structure does not stop until the acceptance test is passed by one of the multiple versions or until all the versions have been exhausted. The significant differences in the recovery block approach from N-version programming are that only one version is executed at a time and the acceptability of results is decided by a test rather than by majority voting. The recovery block technique has been applied to real life systems and has been the basis for the distributed recovery block structure for integrating hardware and software fault tolerance and the extended distributed recovery block structure for command and control applications. Modelling and analysis of recovery blocks are described by \citet{tomek1993modeling, lyu1995software}.
+%\item N-self checking programming: In N-self checking programming, multiple variants of a software are used in a hot-standby fashion as opposed to the recovery block technique in which the variants are used in the cold-standby mode. A self-checking software component is a variant with an acceptance test or a pair of variants with an associated comparison test \citep{laprie1990definition}. Fault tolerance is achieved by executing more than one self-checking component in parallel. These components can also be used to tolerate one or more hardware faults.
+%\end{itemize}
 
 \begin{table}[h]
 \centering
 \caption{Strategies used by different fault tolerance methods}
+\label{tab:faulttolmethods}
 \begin{tabular}{l c c c c }
 \toprule
                    & Design    & Data      & Environment & Checkpointing \\
@@ -311,36 +315,31 @@ Fault treatment    &           &           & \cmark      &               \\
 \end{tabular}
 \end{table}
 
-\ul{The design diversity approach was developed mainly to deal with Bohrbugs. It relies on the assumption of independence of between multiple variants of software. However, as some studies have shown, this assumption may not always be valid. Design diversity can also be used to treat Heisenbugs. Since there are multiple versions of software operating, it not likely that all of them will experience the same transient failure. On the disadvantages of design diversity is the high cost involved in developing multiple variants of software. However, as we shall see in Section 3.3, there are another approaches which are more efficient and better suited to deal with Heisenbugs.}
+%The design diversity approach was developed mainly to deal with \emph{Bohrbugs}. It relies on the assumption of independence of between multiple variants of software. However, as some studies have shown, this assumption may not always be valid. Design diversity can also be used to treat \emph{Heisenbugs}. Since there are multiple versions of software operating, it not likely that all of them will experience the same transient failure. On the disadvantages of design diversity is the high cost involved in developing multiple variants of software. A better and more efficient scheme to deal with \emph{Heisenbugs} will be discussed in \textbf{Section~\ref{sec:envdiv}}.
 
 \subsubsection{Data diversity}
 Data diversity, a technique for fault tolerance in software, was introduced by \citet{ammann1988data}. While the design diversity approaches to provide fault tolerance rely on multiple versions of the software written to the same specifications, the data diversity approach uses only one version of the software. This approach relies on the observation that a software sometime fails for certain values in the input space and this failure could be averted if there is a minor perturbation of input data which is acceptable to the software. N-copy programming, based on data diversity, has N copies of a program executing in parallel, but each copy running on a different input set produced by a diverse-data system. The diverse-data system produces a related set of points in the data space. Selection of the system output is done using an enhanced voting scheme which may not be a majority voting mechanism. This technique might not be acceptable to all programs since equivalent input data transformations might not be acceptable by the specification. \ul{However, in some cases like a real time control program, a minor perturbation in sensor values may be able to prevent a failure since sensor values are usually noisy and inaccurate.}
 
-\ul{Data diversity can work well with Bohrbugs and is cheaper to implement than design diversity techniques. To some extent, data diversity can also deal with Heisenbugs since different input data is presented and by definition, these bugs are non-deterministic and non-repeatable.}
+\ul{Data diversity can work well with \emph{Bohrbugs} and is cheaper to implement than design diversity techniques. To some extent, data diversity can also deal with \emph{Heisenbugs} since different input data is presented and by definition, these bugs are non-deterministic and non-repeatable.}
 
 \subsubsection{Environment diversity}
-Environment diversity is the newest approach to fault tolerance in software. Although this technique has been used for long in an ad hoc manner, only recently has it gained recognition and importance. Having its basis on the observation that most software failures are transient in nature, the environment diversity approach requires re-executing the software in a different environment \citep{jalote1995framework}. Environment diversity deals effectively with Heisenbugs by exploiting their definition and nature.
+\label{sec:envdiv}
+Environment diversity is the newest approach to fault tolerance in software. Although this technique has been used for long in an ad hoc manner, only recently has it gained recognition and importance. Having its basis on the observation that most software failures are transient in nature, the environment diversity approach requires re-executing the software in a different environment \citep{jalote1995framework}. Environment diversity deals effectively with \emph{Heisenbugs} by exploiting their definition and nature.
 
-\citet{adams1984optimizing} has proposed restarting the system as the best approach to masking software faults. Environment diversity is a generalization of restart. This has been proposed in \citep{huang1994two,jalote1995framework} as a cheap but effective technique for fault tolerance in software. There are three components which determine the behaviour of a process or executing software \citep{wang1995checkpointing}:
-
-\begin{itemize}
-\item The volatile state: This consists of the program stack and static and dynamic data segments.
-\item The persistent state: This state refers to all the user files related to a program's execution.
-\item The operating system (OS) environment: This refers to all the resources the program accesses through the operating system like swap space, file systems, communication channels, keyboard and monitors.
-\end{itemize}
-
-Transient faults typically occur in computer systems due to design faults in software which result in unacceptable and erroneous states in the OS environment. Therefore environment diversity attempts to provide a new or modified operating environment for the running software. Usually, this is done at the instance of a failure in the software. When the software fails, it is restarted in a different, error-free OS environment state which is achieved by some clean up operations.
+\citet{adams1984optimizing} has proposed restarting the system as the best approach to masking software faults. Environment diversity is a generalization of restart. This has been proposed in \citep{huang1994two} as a cheap but effective technique for fault tolerance in software. Transient faults typically occur in computer systems due to design faults in software which result in unacceptable and erroneous states in the operating system environment. Therefore environment diversity attempts to provide a new or modified operating environment for the running software. Usually, this is done at the instance of a failure in the software. When the software fails, it is restarted in a different, error-free operating system environment state which is achieved by some clean up operations.
 
 \ul{Examples of environment diversity techniques include retry operation, restart application and rebooting the node. The retry and restart operations can be done on the same node or on another spare (cold/warm/hot) node.}
 
 Tandem's fault tolerant computer system \citep{lee1995software} is based on the process pair approach. It was noted that these failures did not recur once the application was restarted on the second processor. This was due to the fact that the second processor provided a different environment which did not trigger the same error conditions which led to the failure of the application on the first processor. Hence, in this case, hardware redundancy was used to tolerate most of the software faults. The basic observation in all these transient failures is that the same error condition is unlikely to occur if the software is re-executed in a different environment.
 
-\ul{A specific form of environment diversity, called software rejuvenation} \citep{castelli2001proactive,garg1998methodology,huang1995software} \ul{is the crux of our research.}
+%\ul{A specific form of environment diversity, called software rejuvenation} \citep{castelli2001proactive,garg1998methodology,huang1995software} \ul{is the crux of our research.}
 
 \subsubsection{Checkpointing and Recovery}
-\hl{Checkpointing and recovery} \citep{chandy1975analytic, kulkarni1990effects, long1992implementing, pradhan1994roll} \hl{belongs to the category of error recovery for fault tolerance, as opposed to design diversity which belongs to error compensation, and data and environment diversities which belong to the fault treatment category. Error compensation, error recovery and fault treatment are complementary to one another and fault tolerance in software can be increased by deploying a combination of these techniques. The recovery block uses checkpoints in its implementation.} \citet{garg1996minimizing} \hl{proposes and analyses the combination of software rejuvenation (preventive fault treatment) with checkpointing and recovery to reduce the chances of activating a fault and simultaneously minimizing the loss of computation when there is a failure.}
+Checkpointing and recovery \citep{kulkarni1990effects} belongs to the category of error recovery for fault tolerance, as opposed to design diversity which belongs to error compensation, and data and environment diversities which belong to the fault treatment category. Error compensation, error recovery and fault treatment are complementary to one another and fault tolerance in software can be increased by deploying a combination of these techniques. The recovery block uses checkpoints in its implementation. \citet{garg1996minimizing} proposes and analyses the combination of software rejuvenation (preventive fault treatment) with checkpointing and recovery to reduce the chances of activating a fault and simultaneously minimizing the loss of computation when there is a failure.
 
-\hl{Checkpointing involves occasionally saving the state of a process in stable storage during normal execution. Upon failure, the process is restarted in the saved state (last saved checkpoint). This thus reduces the amount of lost work. Checkpointing and recovery was mainly intended to tolerate transient hardware failures, where the application is restarted upon repair of a hardware unit after failure. This technique has been implemented in both software and hardware. Checkpointing and restart was used as early as 1948 when the ENIAC was used to solve a two point boundary value problem with known conditions, although the computation was marred by a very high tube error rate} \citep{avizienis2012evolution}. \hl{Checkpointing has also been used as a backward error recovery technique for handling intermittent software faults since then. For instance, the progressive retry technique} \citep{wang1995checkpointing} \hl{employs checkpointing along with message logs.}
+Checkpointing involves occasionally saving the state of a process in stable storage during normal execution. Upon failure, the process is restarted in the saved state (last saved checkpoint). This thus reduces the amount of lost work. Checkpointing and recovery was mainly intended to tolerate transient hardware failures, where the application is restarted upon repair of a hardware unit after failure. This technique has been implemented in both software and hardware.
+
+%Checkpointing and restart was used as early as 1948 when the ENIAC was used to solve a two point boundary value problem with known conditions, although the computation was marred by a very high tube error rate \citep{avizienis2012evolution}. Checkpointing has also been used as a backward error recovery technique for handling intermittent software faults since then. For instance, the progressive retry technique \citep{wang1995checkpointing} employs checkpointing along with message logs.
 
 \section{Fault tolerance on SpiNNaker}
 The three fault-tolerant mechanisms that will be dealt with in this report are:
@@ -366,7 +365,7 @@ The physical hierarchy of the system has each node containing two silicon dies -
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.4\linewidth]{images/spin5.jpg}
+	\includegraphics[width=0.45\linewidth]{images/spin5.jpg}
 	\caption{48-chip Spin5 board}
 	\label{fig:spin5}
 \end{figure}
@@ -464,7 +463,7 @@ A fault in the \textbf{boot ROM} can be easily detected during start-up if the b
 \subsection{Network tester}
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.35\linewidth]{images/system_architecture.pdf}
+	\includegraphics[width=0.4\linewidth]{images/system_architecture.pdf}
 	\caption{SpiNNaker inter-links.}
 	\label{fig:interchip_links}	
 \end{figure}
